well, switching to installing just a single package since i'm getting a wierd error message

--- a/update-everything.yml
+++ b/update-everything.yml
@@ -2,7 +2,7 @@
 - name: demo playbook
   hosts: localhost
   tasks:
-    - name: upgrade all packages
+    - name: install htop
       apt:
-        name: "*"  
+        name: "htop"  
         state: latest
